[gd_scene load_steps=9 format=3 uid="uid://b7kw4jl2lclgl"]

[ext_resource type="Script" path="res://moby.gd" id="1_v6uqt"]
[ext_resource type="Texture2D" uid="uid://bds0xnrvdoqrt" path="res://img/arnold-636400426763362208-1576203277.png" id="1_ybdqy"]
[ext_resource type="Texture2D" uid="uid://doo5jjb08gtos" path="res://img/arnold-schwarzenegger-face-png-graphic-library-download-arnold-schwarzenegger-face-11563008984bsi42khina-1628091131.png" id="2_xla3l"]
[ext_resource type="AudioStream" uid="uid://8pg4ac1pucx2" path="res://sound/t2_no_problemo.wav" id="4_o0liw"]
[ext_resource type="AudioStream" uid="uid://0ck23578pulq" path="res://sound/t2_goodbye.wav" id="5_24lpw"]
[ext_resource type="AudioStream" uid="uid://depapx15gkqav" path="res://sound/t2_hasta_la_vista.wav" id="6_cd2ur"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xejqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xla3l")
}, {
"duration": 1.0,
"texture": ExtResource("1_ybdqy")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_7c1jp"]
size = Vector3(2, 3, 2)

[node name="Arnold" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
script = ExtResource("1_v6uqt")

[node name="ArnoldAnim" type="AnimatedSprite3D" parent="."]
sprite_frames = SubResource("SpriteFrames_xejqy")
frame_progress = 0.0698526

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7c1jp")

[node name="TopText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.12728, 0)
pixel_size = 0.05
modulate = Color(0.545098, 0.180392, 0.164706, 1)
text = "Es ist"

[node name="NoProblemo" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_o0liw")

[node name="GoodBye" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_24lpw")

[node name="HastaLaVista" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_cd2ur")
